fix: fix an issue where the map is too small

--- a/src/pages/map/map-page.scss
+++ b/src/pages/map/map-page.scss
@@ -2,6 +2,10 @@
 
 .map-page{
     width: 100%;
-    height: auto;
+    height: 100%;
 }
 
+.dustbin-map{
+    width: 100vh;
+    height: 100vh;
+}
